config/envoy-config.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9095

static_resources:
  listeners:
  - name: ingress
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 9090
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
          - name: envoy.filters.http.grpc_web
          - name: envoy.filters.http.grpc_stats
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
              stats_for_all_methods: true
              enable_upstream_stats: true
          - name: envoy.filters.http.router
          route_config:
            name: local_route
            virtual_hosts:
            - name: envoy
              domains:
                - '*'
              routes:
                - match:
                    prefix: /grpc.service.pipedservice.PipedService/
                    grpc:
                  route:
                    cluster: grpc-piped-service
                - match:
                    prefix: /pipe.api.service.pipedservice.PipedService/
                    grpc:
                  route:
                    cluster: grpc-piped-service
                    prefix_rewrite: /grpc.service.pipedservice.PipedService/
                - match:
                    prefix: /grpc.service.webservice.WebService/
                    grpc:
                  route:
                    cluster: grpc-web-service
                - match:
                    prefix: /pipe.api.service.webservice.WebService/
                    grpc:
                  route:
                    cluster: grpc-web-service
                    prefix_rewrite: /grpc.service.webservice.WebService/
                - match:
                    prefix: /grpc.service.apiservice.APIService/
                    grpc:
                  route:
                    cluster: grpc-api-service
                - match:
                    prefix: /pipe.api.service.apiservice.APIService/
                    grpc:
                  route:
                    cluster: grpc-api-service
                    prefix_rewrite: /grpc.service.apiservice.APIService/
                - match:
                    prefix: /
                  route:
                    cluster: server-http
  clusters:
  - name: grpc-piped-service
    http2_protocol_options: {}
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: grpc-piped-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: localhost
                port_value: 9080
    track_cluster_stats:
      request_response_sizes: true
  - name: grpc-web-service
    http2_protocol_options: {}
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: grpc-web-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: localhost
                port_value: 9081
    track_cluster_stats:
      request_response_sizes: true
  - name: grpc-api-service
    http2_protocol_options: {}
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: grpc-api-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: localhost
                port_value: 9083
    track_cluster_stats:
      request_response_sizes: true
  - name: server-http
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: server-http
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: localhost
                port_value: 9082
    track_cluster_stats:
      request_response_sizes: true
